tests/snapshots/integration__compgen__compgen_option_choices3.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_option_names --opt7 a 

STDOUT
--opt1 --opt2 --opt3 --opt4 --opt5 --opt6 --opt8 --opt9 --op10 --op11

STDERR


