tests/snapshots/integration__compgen__compgen_positional.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_positional_requires 

STDOUT
<ARG1>

STDERR


