tests/snapshots/integration__compgen__compgen_positional_arg.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_positional_requires arg1 

STDOUT
__argc_comp:dir	A required arg 2, multiple

STDERR


