tests/snapshots/integration__compgen__compgen_positional_arg2.snap
---
source: tests/compgen.rs
assertion_line: 30
expression: output
---
RUN
prog cmd_positional_requires arg1 arg2

STDOUT
<ARG2>...

STDERR


