tests/snapshots/integration__compgen__compgen_positional_choices.snap
---
source: tests/compgen.rs
assertion_line: 53
expression: output
---
RUN
prog cmd_positional_with_choices

STDOUT
a b

STDERR


