tests/snapshots/integration__compgen__compgen_subcommand.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_option_names 

STDOUT
--opt1	optional
--opt2	required
--opt3	optional, multiple
--opt4	required, multiple
--opt5	optional, default
--opt6	choices
--opt7	choices, default
--opt8	required, choices
--opt9	optional, default from fn
--op10	choices from fn
--op11	required, choices from fn

STDERR


