tests/snapshots/integration__compgen__compgen_unknown_option.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_omitted --unknown foo --flag1 

STDOUT
--opt1 <ARG1>

STDERR


