tests/snapshots/integration__compgen__compgen_unknown_option2.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_omitted --unknown foo 

STDOUT
--flag1
--opt1

STDERR


