tests/snapshots/integration__compgen__dashes_at.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog abc ` ************
abc	/color:default
def	/color:default
ghi	/color:default

************ COMPGEN `prog abc -- ` ************
v1	/color:default
v2	/color:default
